--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -23,7 +23,7 @@
           <div class="col px-0">
             <div class="row">
               <div class="col-lg-6">
-                <h1 class="display-3  text-white">Flask Argon Design</h1>
+                <h1 class="display-3  text-white">Ember Intiative</h1>
                 <p class="lead  text-white">
                   Open-Source web app coded in Flask Microframework on top of Argin Design System
                 </p>
