--- a/app/templates/courses/courses.html
+++ b/app/templates/courses/courses.html
@@ -4,6 +4,7 @@
 
 {% block content %}
   
+{% from 'includes/plugs.html' import display_course%}
   <main class="profile-page">
     <section class="section-profile-cover section-shaped my-0">
       <!-- Circles background  shape-primary -->
@@ -34,71 +35,16 @@
           </div>
         </div>
       </div>
-      
-      
       </div>
     </section>
-
       <section class="section section-lg pt-lg-0 mt--300" style="display: block;"> 
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-12">
               <div class="row row-grid">
-                <div class="col-lg-4">
-                  <div class="card card-lift--hover shadow border-0">
-                    <img src="https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png" class="card-img-top" alt="...">
-                    <div class="card-body py-5">
-                        
-                      <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                        <i class="ni ni-check-bold"></i>
-                      </div> -->
-                      <h6 class="text-primary text-uppercase">Intro to Electrical Engineering</h6>
-                      <p class="description mt-3">Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.</p>
-                      <div>
-                        <span class="badge badge-pill badge-primary">#EE</span>
-                        <span class="badge badge-pill badge-primary">#Arduino</span>
-                        <span class="badge badge-pill badge-primary">#Prep</span>
-                      </div>
-                      <a href="{{url_for('ee')}}" class="btn btn-primary mt-4">Learn more</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="card card-lift--hover shadow border-0">
-                    <img src="https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png" class="card-img-top" alt="...">
-                    <div class="card-body py-5">
-                      <!-- <div class="icon icon-shape icon-shape-success rounded-circle mb-4">
-                        <i class="ni ni-istanbul"></i>
-                      </div> -->
-                      <h6 class="text-success text-uppercase">Intro to Machine Learning</h6>
-                      <p class="description mt-3">Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.</p>
-                      <div>
-                        <span class="badge badge-pill badge-success">#AI</span>
-                        <span class="badge badge-pill badge-success">#MODELS</span>
-                        <span class="badge badge-pill badge-success">#Python</span>
-                      </div>
-                      <a href="{{url_for('ml')}}" class="btn btn-success mt-4">Learn more</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="card card-lift--hover shadow border-0">
-                    <img src="https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png" class="card-img-top" alt="...">
-                    <div class="card-body py-5">
-                      <!-- <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
-                        <i class="ni ni-planet"></i>
-                      </div> -->
-                      <h6 class="text-warning text-uppercase">Intro to iOS Development</h6>
-                      <p class="description mt-3">Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.</p>
-                      <div>
-                        <span class="badge badge-pill badge-warning">#MACOS</span>
-                        <span class="badge badge-pill badge-warning">#Quick Apps</span>
-                        <span class="badge badge-pill badge-warning">#Swift</span>
-                      </div>
-                      <a href="{{url_for('swift')}}" class="btn btn-warning mt-4">Learn more</a>
-                    </div>
-                  </div>
-                </div>
+                {{display_course(title="Intro to Electrical Engineering", description="Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.", color="primary", img_link="https://www.exponent.com/~/media/practices-capabilities-and-industries/eecs/eecs_1250x450px.jpg", badges=["EE", "Arduino", "Prep"], course="ee")}}
+                {{display_course(title="Intro to Python Development", description="Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.", color="success", img_link="https://portfortune.files.wordpress.com/2014/04/python.jpg?w=1200", badges=["Beginner", "Versatile", "Fun"], course="py")}}
+                {{display_course(title="Intro to iOS Development", description="Argon is a great free UI package based on Bootstrap 4 that includes the most important components and features.", color="warning", img_link="https://www.w2ssolutions.com/blog/wp-content/uploads/2019/07/ios-app-development-india.png", badges=["MacOS", "Quick Apps", "Swift"], course="swift")}}
               </div>
             </div>
           </div>
