--- a/app/templates/courses/electroeg.html
+++ b/app/templates/courses/electroeg.html
@@ -4,10 +4,9 @@
 
 {% block content %}
 
-{% from 'includes/plugs.html' import create_DA_Item, create_breaks, quiz_modal, document_modal, yt_modal, create_unit_block, progress_bar%}
+{% from 'includes/plugs.html' import create_DA_Item, create_breaks, quiz_modal, document_modal, yt_modal, create_unit_block, progress_bar, pdf_modal%}
 {% from 'courses/course-material.html' import create_ee%}
   <main class="profile-page">
-      
     <section class="section-profile-cover section-shaped my-0">
       <!-- Circles background -->
       <div class="shape shape-style-1 shape-primary alpha-4">
@@ -31,10 +30,10 @@
 
     {% call(isDocument) create_unit_block(heading="UNIT: 1", description="TBH", int_breaks=6, ext_breaks=7) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_1", title='Lesson 1: Current', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_2", title='Lesson 2: Voltage', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_3", title='Lesson 3: Conductance', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_4", title='Lesson 4: Ammeters & Voltmeters', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_1", title='Lesson 1: Current', doc=doc, hidden_val=ee_course[0])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_2", title='Lesson 2: Voltage', doc=doc, hidden_val=ee_course[1])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_3", title='Lesson 3: Conductance', doc=doc, hidden_val=ee_course[2])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_4", title='Lesson 4: Ammeters & Voltmeters', doc=doc, hidden_val=ee_course[3])}} 
       {% else %}
           None!
       {% endif %}
@@ -42,9 +41,9 @@
 
     {% call(isDocument) create_unit_block(heading="UNIT: 2", description="TBH", int_breaks=5, ext_breaks=6) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_5", title='Lesson 5: Resistance (Pt. 1)', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_6", title='Lesson 6: Resistance (Pt. 2)', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_7", title='Lesson 7: Resistance (Pt. 3)', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_5", title='Lesson 5: Resistance (Pt. 1)', doc=doc, hidden_val=ee_course[4])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_6", title='Lesson 6: Resistance (Pt. 2)', doc=doc, hidden_val=ee_course[5])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_7", title='Lesson 7: Resistance (Pt. 3)', doc=doc, hidden_val=ee_course[6])}} 
       {% else %}
           None!
       {% endif %}
@@ -52,9 +51,9 @@
 
     {% call(isDocument) create_unit_block(heading="UNIT: 3", description="TBH", int_breaks=5, ext_breaks=6) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_8", title='Lesson 8: Ohm\'s Law', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_9", title='Lesson 9: Power & Energy', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_10", title='Lesson 10: Series Resistors', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_8", title='Lesson 8: Ohm\'s Law', doc=doc, hidden_val=ee_course[7])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_9", title='Lesson 9: Power & Energy', doc=doc, hidden_val=ee_course[8])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_10", title='Lesson 10: Series Resistors', doc=doc, hidden_val=ee_course[9])}} 
       {% else %}
           None!
       {% endif %}
@@ -62,9 +61,9 @@
 
     {% call(isDocument) create_unit_block(heading="UNIT: 4", description="TBH", int_breaks=5, ext_breaks=6) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_11", title='Lesson 11: Series Circuits', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_12", title='Lesson 12: Kirchoff\'s Voltage Law', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_13", title='Lesson 13: Kirchoff\'s Current Law', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_11", title='Lesson 11: Series Circuits', doc=doc, hidden_val=ee_course[10])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_12", title='Lesson 12: Kirchoff\'s Voltage Law', doc=doc, hidden_val=ee_course[11])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_13", title='Lesson 13: Kirchoff\'s Current Law', doc=doc, hidden_val=ee_course[12])}} 
       {% else %}
           None!
       {% endif %}
@@ -72,28 +71,26 @@
 
     {% call(isDocument) create_unit_block(heading="UNIT: 5", description="TBH", int_breaks=5, ext_breaks=6) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_14", title='Lesson 14: Ground', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_15", title='Lesson 15: Parallel Resistors', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_16", title='Lesson 16: Parallel Circuits', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_14", title='Lesson 14: Ground', doc=doc, hidden_val=ee_course[13])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_15", title='Lesson 15: Parallel Resistors', doc=doc, hidden_val=ee_course[14])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_16", title='Lesson 16: Parallel Circuits', doc=doc, hidden_val=ee_course[15])}} 
       {% else %}
           None!
       {% endif %}
     {% endcall %}
     
-    {% call(isDocument) create_unit_block(heading="UNIT: 5", description="TBH", int_breaks=5, ext_breaks=6) %}
+    {% call(isDocument) create_unit_block(heading="UNIT: 6", description="TBH", int_breaks=5, ext_breaks=6) %}
       {% if isDocument %}
-        {{create_DA_Item(modal_id="doc_ee_di_17", title='Lesson 17: Open and Short Circuits', doc=doc, hidden_val="numcorrect")}} 
-        {{create_DA_Item(modal_id="doc_ee_di_18", title='Lesson 18: Series-Parallel Circuits', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_17", title='Lesson 17: Open and Short Circuits', doc=doc, hidden_val=ee_course[16])}} 
+        {{create_DA_Item(modal_id="doc_ee_di_18", title='Lesson 18: Series-Parallel Circuits', doc=doc, hidden_val=ee_course[17])}}
       {% else %}
           None!
       {% endif %}
     {% endcall %}
   </main>
 
- 
   {{ yt_modal(vid_id='yTvid', ifr_id='sauce', title="Hot Wings", emb_link="https://www.youtube.com/embed/Da8-QfGemgo") }}
   {{ yt_modal(vid_id='yTvid2', ifr_id='sauce2', title="Caleb City", emb_link="https://www.youtube.com/embed/M01GuDCk4f4") }}
-
   {{ create_ee()}}
 
 <!-- Add pausing functionality instead -->
