--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -4,7 +4,7 @@
       <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
           <a class="navbar-brand mr-lg-5" href="/">
-           <h3 style="color: white;">Beezcode</h2>
+           <h3 style="color: white;"><strong>Ember Init.</strong></h2>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
               <div class="row">
                 <div class="col-6 collapse-brand">
                   <a href="/">
-                    <h3 style="color: white;">Beezcode</h2>
+                    <h3 style="color: white;">Ember Init.</h2>
                   </a>
                 </div>
                 <div class="col-6 collapse-close">
@@ -36,12 +36,56 @@
               <li class="nav-item">
                 <a class="nav-link nav-link-icon" href="{{ url_for('courses') }}" data-toggle="tooltip" 
                    title="Course Selection">
-                   <i class="fas fa-bars"></i> Coursehub
+                   <i class="fas fa-bars" style="position: relative; bottom: 10px;"></i> Coursehub
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('about') }}" data-toggle="tooltip" 
+                   title="About Us">
+                   <i class="fa fa-info-circle" aria-hidden="true"></i> About Us
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('contactus') }}" data-toggle="tooltip" 
+                   title="Contact Us">
+                   <div></div><i class="far fa-address-card"></i> Contact Us</div>
+                   
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+              </li>
+            </ul>
+
+            {% else %}
+            <ul class="navbar-nav navbar-nav-hover align-items-lg-cemter">
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('index') }}" data-toggle="tooltip" 
+                   title="Home Page">
+                   <i class="fas fa-house-user" aria-hidden="true"></i> Home
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('about') }}" data-toggle="tooltip" 
+                   title="About Us">
+                   <i class="fas fa-bars"></i> About Us
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('contactus') }}" data-toggle="tooltip" 
+                   title="Contact Us">
+                   <i class="fa fa-address-book" aria-hidden="true"></i> Contact Us
                   <span class="nav-link-inner--text d-lg-none"></span>
                 </a>
               </li>
             </ul>
             {% endif %}
+
+            
+
+
             
             <ul class="navbar-nav align-items-lg-center ml-lg-auto">
 
