--- a/app/templates/includes/plugs.html
+++ b/app/templates/includes/plugs.html
@@ -214,21 +214,18 @@
 <br>
 {% endmacro%}
 
-{% macro display_course(title, description, color, img_link, badges, course) %}
+{% macro display_course(title, color, img_link, course, description, count=0) %}
 <div class="col-lg-4">
-  <div class="card card-lift--hover shadow border-0">
+  <a href="{{url_for(course)}}">
+  <div class="card card-lift--hover shadow border-0" style="padding-top: 0px;">
     <img src="{{img_link}}" class="card-img-top" alt="..." height="200px;">
-    <div class="card-body py-5">
+    <div class="card-body" >
       <h6 class="text-{{color}} text-uppercase">{{title}}</h6>
-      <p class="description mt-3">{{description}}}</p>
-      <div>
-        <span class="badge badge-pill badge-{{color}}">#{{badges[0]}}</span>
-        <span class="badge badge-pill badge-{{color}}">#{{badges[1]}}</span>
-        <span class="badge badge-pill badge-{{color}}">#{{badges[2]}}</span>
-      </div>
-      <a href="{{url_for(course)}}" class="btn btn-{{color}} mt-4">Learn more</a>
+      <p class="description mt-3" style="color: black;">{{description}}</p>
     </div>
+    {{create_breaks(count)}}
   </div>
+</a>
 </div>
 {% endmacro%}
 
