--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -42,15 +42,15 @@
                 <a href="#peer">
                 <div class="card card-lift--hover shadow border-0">
                   <div class="card-body py-5">
-                    <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
+                    <div class="icon icon-shape icon-shape-warning rounded-circle mb-4" style="background-color:#FF8D8D; color:white;">
                       <i class="fas fa-chalkboard-teacher"></i>
                     </div>
-                    <h6 class="text-warning text-uppercase">Peer to Peer Tutoring</h6>
-                    <p class="description mt-3" style="color: black;">Offering in person computer science and math related courses to expand STEM to our community. We have been able to benefit many underpriveleged children in many bay area cities.</p>
+                    <h6 class="text-uppercase" style="color: #FF8D8D;"><strong>Peer to Peer Tutoring</strong></h6>
+                    <p class="description mt-3" style="color: black; font-size:medium;">Offering in person computer science and math related courses to expand STEM to our community. We have been able to benefit many underpriveleged children in many bay area cities.</p>
                     <div>
-                      <span class="badge badge-pill badge-warning">P2P</span>
-                      <span class="badge badge-pill badge-warning">CS & Math</span>
-                      <span class="badge badge-pill badge-warning">Bay-Area</span>
+                      <span class="badge badge-pill" style="background-color:#FF8D8D; color:white;">P2P</span>
+                      <span class="badge badge-pill" style="background-color:#FF8D8D; color:white;">CS & Math</span>
+                      <span class="badge badge-pill" style="background-color:#FF8D8D; color:white;">Bay-Area</span>
                     </div>
                   </div>
                 </div>
@@ -61,15 +61,15 @@
                   <a href="#student">
                   <div class="card card-lift--hover shadow border-0">
                     <div class="card-body py-5">
-                      <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
+                      <div class="icon icon-shape icon-shape-warning rounded-circle mb-4" style="background-color: orange; color:white;">
                         <i class="fas fa-project-diagram"></i>
                       </div>
-                      <h6 class="text-warning text-uppercase">Student-Made Projects</h6>
-                      <p class="description mt-3" style="color: black;">Courses for students - by students. Please register to see our Python, Arduino, and Swift Courses! These courses can serve as a great introduction into a new field. Many more projects coming soon!!</p> 
+                      <h6 class="text-uppercase" style="color: orange;"> <strong>Student-Made Projects</strong></h6>
+                      <p class="description mt-3" style="color: black; font-size:medium;">Courses for students - by students. Please register to see our Python, Arduino, and Swift Courses! These courses can serve as a great introduction into a new field. Many more projects coming soon!!</p> 
                       <div>
-                        <span class="badge badge-pill badge-warning">EE</span>
-                        <span class="badge badge-pill badge-warning">Python</span>
-                        <span class="badge badge-pill badge-warning">XCode</span>
+                        <span class="badge badge-pill" style="background-color: orange; color:white;">EE</span>
+                        <span class="badge badge-pill" style="background-color: orange; color:white;">Python</span>
+                        <span class="badge badge-pill" style="background-color: orange; color:white;">XCode</span>
                       </div>
                     </div>
                   </div>
@@ -81,15 +81,15 @@
                 <a href="#dedication">
                 <div class="card card-lift--hover shadow border-0">
                   <div class="card-body py-5">
-                    <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
+                    <div class="icon icon-shape icon-shape-warning rounded-circle mb-4" style="background-color: #cc99ff; color:white;">
                       <i class="fas fa-hand-holding-heart"></i>
                     </div>
-                    <h6 class="text-warning text-uppercase">Dedication to Philantropy</h6>
-                    <p class="description mt-3" style="color: black;">With the new distance learning model it is essential students have access to the necessary technology to optimize their school experience.</p> <br>
+                    <h6 class="text-uppercase" style="color: #cc99ff;"><strong>Dedication to Philantropy</strong></h6>
+                    <p class="description mt-3" style="color: black; font-size:medium;">With the new distance learning model it is essential students have access to the necessary technology to optimize their school experience.</p> <br> <br>
                     <div>
-                      <span class="badge badge-pill badge-warning">Laptops</span>
-                      <span class="badge badge-pill badge-warning">DLM</span>
-                      <span class="badge badge-pill badge-warning">Giving</span>
+                      <span class="badge badge-pill" style="background-color: #cc99ff; color:white;">Laptops</span>
+                      <span class="badge badge-pill" style="background-color: #cc99ff; color:white;">DLM</span>
+                      <span class="badge badge-pill" style="background-color: #cc99ff; color:white;">Giving</span>
                     </div>
                   </div>
                 </div>
@@ -100,7 +100,7 @@
         </div>
       </div>
     </section>
-    <section class="section section-lg" id="peer">
+    <section class="section section-lg bg-secondary" id="peer">
       <div class="container">
         <div class="row row-grid align-items-center">
           <div class="col-md-6 order-md-2">
@@ -108,7 +108,7 @@
           </div>
           <div class="col-md-6 order-md-1">
             <div class="pr-md-5">
-              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
+              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5" style="background-color:#FF8D8D; color:white;">
                 <i class="fas fa-chalkboard-teacher"></i>
               </div>
               <h3>Peer to Peer Teaching</h3>
@@ -156,11 +156,11 @@
         </div>
       </div>
     </section>
-    <section class="section bg-secondary" id="student">
+    <section class="section" id="student">
       <div class="container">
         <div class="row row-grid align-items-center">
           <div class="col-md-6">
-            <div class="card bg-default shadow border-0">
+            <div class="card border-0">
               <img src="{{ url_for('static', filename='assets/img/theme/courses.png') }}" class="img-fluid floating" alt="image">
               <!-- <blockquote class="card-blockquote">
                 <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
@@ -174,7 +174,7 @@
           </div>
           <div class="col-md-6">
             <div class="pl-md-5">
-              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
+              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5" style="background-color: orange; color:white;">
                 <i class="fas fa-project-diagram"></i>
               </div>
               <h3>Student-Made Projects</h3>
@@ -189,19 +189,20 @@
       </div>
     </section>
 
-    <section class="section section-lg" id="dedication">
+    <section class="section bg-secondary section-lg" id="dedication">
       <div class="container">
         <div class="row row-grid align-items-center">
           <div class="col-md-6 order-md-2">
-            <img src="{{ url_for('static', filename='assets/img/theme/laptop.jpg') }}" class="img-fluid floating" alt="image">
+            <img src="{{ url_for('static', filename='assets/img/theme/world.png') }}" class="img-fluid floating" alt="image" height="120%" width="120%">
           </div>
           <div class="col-md-6 order-md-1">
             <div class="pr-md-5">
-              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
+              <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5" style="background-color: #cc99ff; color:white;">
                 <i class="fas fa-hand-holding-heart"></i>
               </div>
               <h3>Dedication to Philanthropy</h3>
-              <p>Ember Initiative is a nonprofit organization. and our team is always looking for new and unique ways to give back to our community. With the coronavirus pandemic rendering many schools incapable of holding normal classes, many schools are transitioning to a distance learning model with classes held over video conferencing platform zoom. Unfortunately, many students who attend Title One schools find themselves unable to purchase the necessary technology to thrive in these classes. For this reason, we have partnered with many Title One schools in the San Francisco Bay Area to raise money to purchase refurbished laptops for these students to use during these uncertain times. It is essential that we make sure no student is left behind soley because of their financial situation.</p>
+              <p>Ember Initiative is a nonprofit organization and our team is always looking for new and unique ways to give back to our community. With the coronavirus pandemic rendering many schools incapable of holding normal classes, many schools are transitioning to a distance learning model with classes held over video conferencing platform zoom. Unfortunately, many students who attend Title One schools find themselves unable to purchase the necessary technology to thrive in these classes. For this reason, we have partnered with many Title One schools in the San Francisco Bay Area to raise money to purchase refurbished laptops for these students to use during these uncertain times. It is essential that we make sure no student is left behind soley because of their financial situation.</p>
+            
             </div>
           </div>
         </div>
