--- a/app/templates/courses/courses.html
+++ b/app/templates/courses/courses.html
@@ -30,8 +30,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-12">
               <div class="row row-grid">
-                {{display_course(title="Intro to Electrical Engineering", color="primary", img_link="https://www.exponent.com/~/media/practices-capabilities-and-industries/eecs/eecs_1250x450px.jpg", description="This introductory course will teach you the fundamental knowledge you will need to know for basic analysis of direct current circuits.", course="ee")}}
-                {{display_course(title="Intro to Python Development",  color="success", img_link="https://portfortune.files.wordpress.com/2014/04/python.jpg?w=1200", description="Python is an interpreted, high-level, general-purpose programming language. It has many practical applications from simple automation to creating self-driving cars.", course="py", count=0)}}
+                {{display_course(title="Intro to Circuit Analysis", color="warning", img_link="https://www.exponent.com/~/media/practices-capabilities-and-industries/eecs/eecs_1250x450px.jpg", description="This introductory course will teach you the fundamental knowledge you will need to know for basic analysis of direct current circuits.", course="ee", count=1)}}
+                {{display_course(title="Intro to Python Development",  color="warning", img_link="https://portfortune.files.wordpress.com/2014/04/python.jpg?w=1200", description="Python is an interpreted, high-level, general-purpose programming language. It has many practical applications from simple automation to creating self-driving cars.", course="py", count=0)}}
                 {{display_course(title="Intro to iOS Development",  color="warning", img_link="https://www.w2ssolutions.com/blog/wp-content/uploads/2019/07/ios-app-development-india.png", description="This swift course is still under construction.", course="swift", count=3)}}
               </div>
             </div>
