--- a/app/templates/courses/swift.html
+++ b/app/templates/courses/swift.html
@@ -10,20 +10,8 @@
   <main class="profile-page">
     <section class="section-profile-cover section-shaped my-0">
       <!-- Circles background -->
-      <div class="shape shape-style-1 bg-gradient-warning alpha-4">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <!-- SVG separator -->
-      <div class="separator separator-bottom separator-skew">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
+      <div class="shape">
+        <img src="{{ url_for('static', filename='assets/img/theme/swift.png') }}" alt="" class="img-fluid" style="width: 100%; height:100%;">
       </div>
     </section>
     {{ progress_bar(heading="Intro to iOS Development", course="sw") }}
