--- a/app/templates/layouts/default-fullscreen.html
+++ b/app/templates/layouts/default-fullscreen.html
@@ -16,17 +16,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
 
   <title>
-      Flask Argon Design - {% block title %}{% endblock %} | AppSeed
+      Ember Init
   </title>
 
   <!-- Favicon -->
-  <link href="/static/assets/img/brand/favicon.png" rel="icon" type="image/png">
+  <link href="{{ url_for('static', filename='assets/img/brand/logo.png') }}" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
