--- a/app/templates/pages/aboutus.html
+++ b/app/templates/pages/aboutus.html
@@ -124,48 +124,69 @@
             <h2 class="display-3">The Team</h2>
           </div>
         </div>
+
+
         <div class="row">
-          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-            <div class="px-4">
-              <img src="{{ url_for('static', filename='assets/img/team-members/akshay.JPG') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
-              <div class="pt-4 text-center">
-                <h5 class="title">
-                  <span class="d-block mb-1">Akshay Kumar</span>
-                  <small class="h6 text-muted">Web Developer</small>
-                </h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
             <div class="px-4">
               <img src="{{ url_for('static', filename='assets/img/team-members/sahej.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
               <div class="pt-4 text-center">
                 <h5 class="title">
                   <span class="d-block mb-1">Sahej Virk</span>
-                  <small class="h6 text-muted">Marketing Strategist</small>
+                  <small class="h6 text-muted">Founder - Marketing Director</small>
                 </h5>
                 
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+            <div class="px-4">
+              <img src="{{ url_for('static', filename='assets/img/team-members/akshay.JPG') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+              <div class="pt-4 text-center">
+                <h5 class="title">
+                  <span class="d-block mb-1">Akshay Kumar</span>
+                  <small class="h6 text-muted">Founder - Technology Director</small>
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
             <div class="px-4">
               <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/henry.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
               <div class="pt-4 text-center">
                 <h5 class="title">
                   <span class="d-block mb-1">Henry Shu</span>
-                  <small class="h6 text-muted">GUI Designer</small>
+                  <small class="h6 text-muted">Founder - Programs Director</small>
                 </h5>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+          
+        </div>
+          <br>
+          <br>
+        <div class="row">
+          <div class="col-md-6 col-lg-6 mb-5 mb-lg-0">
             <div class="px-4">
-              <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/kevin.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+              <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/chirag.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+              <div class="pt-4 text-center">
+                <h5 class="title">
+                  <span class="d-block mb-1">Chirag Mani</span>
+                  <small class="h6 text-muted">Outreach</small>
+                </h5>
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 mb-5 mb-lg-0">
+            <div class="px-4">
+              <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/kevin.png') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
               <div class="pt-4 text-center">
                 <h5 class="title">
                   <span class="d-block mb-1">Kevin Pradjinata</span>
-                  <small class="h6 text-muted">Assistant</small>
+                  <small class="h6 text-muted">Assistant to the Programs Director</small>
                 </h5>
                 
               </div>
